<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPeriodType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_type" >
    </TextView>

    <Spinner
        android:id="@+id/spPeriodType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:id="@+id/tvTimeInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/interval" >
    </TextView>

    <LinearLayout
        android:id="@+id/lytTimeConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etTimeInterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/default_interval"
            android:textSize="50sp" >
        </EditText>

        <LinearLayout
            android:id="@+id/lytTimeConf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/upButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/increment"
                android:src="@drawable/ic_action_collapse" />

            <ImageButton
                android:id="@+id/downbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/decrement"
                android:src="@drawable/ic_action_expand" >
            </ImageButton>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvMaxTimeAllowed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/maxTimeAllowed"
        android:textColor="#CC3300" >
    </TextView>

    <TextView
        android:id="@+id/tvResultTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/result_str_3"
        android:textColor="#000066"
        android:textSize="25sp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/okbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" >
        </Button>

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>