<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dictionary="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="elango.thaaru.easydictionary.MainActivity" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        dictionary:actionViewClass="android.support.v7.widget.SearchView"
        dictionary:showAsAction="ifRoom"/>
    <item
        android:id="@+id/about_app"
        android:title="@string/about_app"
        dictionary:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        dictionary:showAsAction="collapseActionView"/>

</menu>