<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytRateApp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rate_us_bg"
    android:orientation="vertical" 
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tvRateAppHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/rate_app"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white" />

    <View
        android:id="@+id/vSeperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#000066" />

    <TextView
        android:id="@+id/tvRateAppContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/rate_app_content"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnRateNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rate_us_btn_bg"
        android:text="@string/rate_app_ratenow"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRemindLater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rate_us_btn_bg"
        android:text="@string/rate_app_remind"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNeverAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rate_us_btn_bg"
        android:text="@string/rate_app_never"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>