<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutAppScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/lytAboutApp"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <View
            android:id="@+id/vTopLine"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="#00CCFF" />

        <TextView
            android:id="@+id/tvApplicationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:shadowColor="#550066FF"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/about_app_content_1"
            android:textColor="#003300"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAboutAppVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_app_content_2"
            android:textColor="#990000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAboutAppDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/about_app_content_3" />

        <View
            android:id="@+id/vSeperator1"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="#FF9966" />

        <TextView
            android:id="@+id/tvAboutHowWid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:shadowColor="#44009933"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/about_app_content_how_wid"
            android:textColor="#0033CC"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAboutHowWidContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_app_content_how_wid_1" />

        <View
            android:id="@+id/vSeperator2"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="#FF9966" />

        <TextView
            android:id="@+id/tvAboutHowApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:shadowColor="#44009933"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/about_app_content_how_app"
            android:textColor="#0033CC"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAboutHowAppContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_app_content_how_app_1" />

        <View
            android:id="@+id/vSeperator3"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="#FF9966" />

        <TextView
            android:id="@+id/tvAboutAppPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:shadowColor="#44009933"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/about_app_content_pro"
            android:textColor="#0033CC"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAboutAppProFeatures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_app_content_pro_1" />

        <TextView
            android:id="@+id/tvAboutAppProContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_app_content_pro_2" />

        <View
            android:id="@+id/vBottomLine"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#00CCFF" />
    </LinearLayout>

</ScrollView>