<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContactUS"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <View
        android:id="@+id/vTopLine"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="#00CCFF" />

    <TextView
        android:id="@+id/tvContatctUsContent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/contact_us_content_1" />

    <TextView
        android:id="@+id/tvContatctUsContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact_us_content_2"
        android:textColor="#990000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvContatctUsContent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact_us_content_3" />

    <View
        android:id="@+id/vBottomLine"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#00CCFF" />

</LinearLayout>